style: fix weird layout shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,11 @@ input[type=number]::-webkit-outer-spin-button {
   width: 40px;
   border-radius: 10px 10px 0px 0px;
   opacity: 0.6;
+  transition: none !important;
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
 }
 #start.on {
   height: 6px !important;
